// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SectionTitle styles renders SectionTitle with default svg color 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  vertical-align: middle;
  font-size: 18px;
  color: #333333;
  margin-bottom: 30px;
}

.c0 svg {
  margin-right: 20px;
  display: inline-block;
  fill: #fff;
  height: 20px;
  width: 20px;
}

<div
  className="c0"
/>
`;

exports[`SectionTitle styles renders SectionTitle with default values 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  vertical-align: middle;
  font-size: 18px;
  color: #333333;
  margin-bottom: 30px;
}

.c0 svg {
  margin-right: 20px;
  display: inline-block;
  fill: #f4a652;
  height: 20px;
  width: 20px;
}

<div
  className="c0"
/>
`;

exports[`SectionTitle styles renders SectionTitleWrapper 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  vertical-align: middle;
  font-size: 18px;
  color: #333333;
  margin-bottom: 30px;
}

.c0 svg {
  margin-right: 20px;
  display: inline-block;
  fill: #f4a652;
  height: 20px;
  width: 20px;
}

<div
  className="c0"
/>
`;
